Final OrbitalVerse homepage: full redesign with images, vision, and waitlist

--- a/public/index.html
+++ b/public/index.html
@@ -3,73 +3,98 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>OrbitalVerse | Official Website</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>OrbitalVerse | Web3 Intelligence & Mining Network</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/png" href="images/logo.png" />
 </head>
 <body>
-  <header class="neon-header">
-    <img src="logo.png" alt="OrbitalVerse Logo" class="logo" onclick="location.href='index.html'">
-    <nav>
-      <a href="#whatwedo">What We Do</a>
-      <a href="#platforms">Platforms</a>
-      <a href="#who">About</a>
-      <a href="#waitlist">Partner</a>
+  <header class="header">
+    <a href="/">
+      <img src="images/logo.png" alt="OrbitalVerse Logo" class="logo" />
+    </a>
+    <nav class="navbar">
+      <a href="/">Home</a>
+      <a href="orbitalscan.html">OrbitalScan</a>
+      <a href="orbitalmine.html">OrbitalMine</a>
+      <a href="#waitlist">Partner with Us</a>
     </nav>
   </header>
 
   <section class="hero">
-    <h1>OrbitalVerse</h1>
-    <div class="subtitle neon-box">
-      Unifying AI Agents and Web3 Discovery into a single intelligent ecosystem for the future of personal automation and decentralized rewards.
-    </div>
-    <img src="hero-main.jpg" alt="Hero" class="hero-img"/>
-  </section>
-
-  <section id="whatwedo" class="section">
-    <h2 class="neon-title">What We Do</h2>
-    <div class="cards">
-      <div class="card neon-box">Create intelligent AI Agents tailored to your personality and needs</div>
-      <div class="card neon-box">Use any device as a personal mining unit to earn passively</div>
-      <div class="card neon-box">Auto-build unique investment portfolios based on your emotions and budget</div>
-      <div class="card neon-box">Launch local educational systems powered by AI & ML</div>
-      <div class="card neon-box">Host international Web3 and tech webinars</div>
+    <div class="hero-content">
+      <h1>OrbitalVerse</h1>
+      <p>Unifying AI Agents and Web3 Discovery into a single intelligent ecosystem for the future of personal automation and decentralized rewards.</p>
+      <img src="images/hero-main.jpg" alt="OrbitalVerse City" class="hero-img" />
     </div>
   </section>
 
-  <section id="platforms" class="section">
-    <h2 class="neon-title">Explore Our Platforms</h2>
-    <div class="platforms">
-      <div class="platform-card neon-box">
-        <img src="orbitalscan-preview.jpg" alt="OrbitalScan Preview"/>
-        <p>OrbitalScan - Daily Signals, Airdrops & Insights</p>
-        <a href="https://t.me/orbitalscan_bot" target="_blank" class="neon-btn">Learn More</a>
+  <section class="features">
+    <h2>What We Do</h2>
+    <img src="images/orbitalverse-eco.jpg" alt="OrbitalVerse Ecosystem" class="section-img" />
+    <div class="features-grid">
+      <div class="feature-box">
+        <h3>Personal AI Agents</h3>
+        <p>Each user builds their own emotionally-aware AI assistant for daily research, analysis, and task execution across the web.</p>
       </div>
-      <div class="platform-card neon-box">
-        <img src="orbitalmine-preview.jpg" alt="OrbitalMine Preview"/>
-        <p>OrbitalMine - Mine while you live</p>
-        <a href="https://orbitalmine-web.vercel.app/" target="_blank" class="neon-btn">Learn More</a>
+      <div class="feature-box">
+        <h3>Device-Based Mining</h3>
+        <p>Every machine becomes a miner. Earn rewards while contributing compute power and validating reputation on-chain.</p>
+      </div>
+      <div class="feature-box">
+        <h3>Smart Portfolio Curation</h3>
+        <p>Create investment baskets based on your unique preferences, budget, and emotional risk profile — powered by intelligent agents.</p>
+      </div>
+      <div class="feature-box">
+        <h3>Local AI Learning Spaces</h3>
+        <p>Personalized learning modules in tech and AI fields, built for students, researchers, and professionals — all on your device.</p>
+      </div>
+      <div class="feature-box">
+        <h3>International Web3 Webinars</h3>
+        <p>Connect with the global community through live events, panel talks, and future-focused workshops.</p>
       </div>
     </div>
   </section>
 
-  <section id="who" class="section">
-    <h2 class="neon-title">Who We Are</h2>
-    <div class="neon-box about-text">
-      We are a dedicated Web3 and AI innovation team with experience across blockchain, machine learning, product development, and strategic design. Since 2016, our collective vision has driven unique projects that fuse automation with decentralized utility — shaping a smarter digital future under the OrbitalVerse mission.
+  <section class="projects">
+    <h2>Explore Our Platforms</h2>
+    <div class="features-grid">
+      <div class="feature-box">
+        <img src="images/orbitalscan-preview.jpg" alt="OrbitalScan Preview" />
+        <h3>OrbitalScan</h3>
+        <p>Track the newest tokens, NFT drops, airdrops, and memecoins before they trend. Discover alpha signals in real time.</p>
+        <a href="orbitalscan.html" class="cta-button">Learn More</a>
+      </div>
+      <div class="feature-box">
+        <img src="images/orbitalmine-preview.jpg" alt="OrbitalMine Preview" />
+        <h3>OrbitalMine</h3>
+        <p>Gamified mining meets AI logic. Upgrade NFT miners, build your reputation, and earn native tokens every day.</p>
+        <a href="orbitalmine.html" class="cta-button">Learn More</a>
+      </div>
     </div>
   </section>
 
-  <section id="waitlist" class="section">
-    <h2 class="neon-title">Partner With Us</h2>
-    <div class="waitlist-box neon-box">
-      <input type="email" placeholder="Enter your email" />
-      <button class="neon-btn">Join Waitlist</button>
-    </div>
+  <section class="about">
+    <h2>Who We Are</h2>
+    <img src="images/orbital-console.jpg" alt="Orbital Console" class="section-img" />
+    <p>
+      We are a 5-person core team with expertise across AI, project design, machine learning, blockchain development, and product strategy.  
+      Since 2016, we’ve led and contributed to dozens of initiatives in Web3 and intelligent automation — united now under one bold mission:  
+      Building a truly personal, automated, and decentralized digital life. OrbitalVerse is more than a product — it’s a long-term vision.
+    </p>
   </section>
 
-  <footer>
-    <a href="#hero"><img src="logo.png" class="footer-logo" alt="Back to top"></a>
+  <section class="waitlist" id="waitlist">
+    <h2>Partner with Us</h2>
+    <p>Join our journey and get notified as we grow the OrbitalVerse.</p>
+    <form class="waitlist-form">
+      <input type="email" placeholder="Enter your email" required />
+      <button type="submit">Join Waitlist</button>
+    </form>
+  </section>
+
+  <footer class="footer">
+    <p>© 2025 OrbitalVerse — All Rights Reserved.</p>
   </footer>
 </body>
 </html>
