--- a/public/index.html
+++ b/public/index.html
@@ -4,97 +4,87 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>OrbitalVerse | Web3 Intelligence & Mining Network</title>
+  <title>OrbitalVerse</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" type="image/png" href="images/logo.png" />
+  <link rel="icon" type="image/png" href="images/orbital-icon.png" />
 </head>
 <body>
   <header class="header">
-    <a href="/">
-      <img src="images/logo.png" alt="OrbitalVerse Logo" class="logo" />
-    </a>
-    <nav class="navbar">
-      <a href="/">Home</a>
-      <a href="orbitalscan.html">OrbitalScan</a>
-      <a href="orbitalmine.html">OrbitalMine</a>
-      <a href="#waitlist">Partner with Us</a>
+    <img src="images/orbital-icon.png" alt="OrbitalVerse Logo" class="logo" onclick="window.location.href='index.html'" />
+    <nav class="nav">
+      <a href="#whatwedo">What We Do</a>
+      <a href="#platforms">Platforms</a>
+      <a href="#whoweare">About</a>
+      <a href="#waitlist">Join Us</a>
     </nav>
   </header>
 
   <section class="hero">
-    <div class="hero-content">
-      <h1>OrbitalVerse</h1>
-      <p>Unifying AI Agents and Web3 Discovery into a single intelligent ecosystem for the future of personal automation and decentralized rewards.</p>
-      <img src="images/hero-main.jpg" alt="OrbitalVerse City" class="hero-img" />
-    </div>
+    <h1 class="hero-title">Unifying AI Agents and Web3 Discovery</h1>
+    <p class="hero-subtitle">Into a single intelligent ecosystem for the future of personal automation and decentralized rewards.</p>
   </section>
 
-  <section class="features">
-    <h2>What We Do</h2>
-    <img src="images/orbitalverse-eco.jpg" alt="OrbitalVerse Ecosystem" class="section-img" />
-    <div class="features-grid">
-      <div class="feature-box">
-        <h3>Personal AI Agents</h3>
-        <p>Each user builds their own emotionally-aware AI assistant for daily research, analysis, and task execution across the web.</p>
+  <section class="section" id="whatwedo">
+    <div class="section-title neon-box">What We Do</div>
+    <div class="cards">
+      <div class="card neon-white">
+        <h3>Create Your Personal AI Agent</h3>
+        <p>Build your own intelligent assistant to search, analyze, and organize across the internet in your own voice and style.</p>
       </div>
-      <div class="feature-box">
-        <h3>Device-Based Mining</h3>
-        <p>Every machine becomes a miner. Earn rewards while contributing compute power and validating reputation on-chain.</p>
+      <div class="card neon-white">
+        <h3>Turn Devices Into Miners</h3>
+        <p>Use your phone, laptop, or home devices as smart miners to earn by contributing to the OrbitalVerse ecosystem.</p>
       </div>
-      <div class="feature-box">
-        <h3>Smart Portfolio Curation</h3>
-        <p>Create investment baskets based on your unique preferences, budget, and emotional risk profile — powered by intelligent agents.</p>
+      <div class="card neon-white">
+        <h3>Build Custom Investment Baskets</h3>
+        <p>Create investment strategies based on your personality, budget, and emotions — tailored by AI.</p>
       </div>
-      <div class="feature-box">
-        <h3>Local AI Learning Spaces</h3>
-        <p>Personalized learning modules in tech and AI fields, built for students, researchers, and professionals — all on your device.</p>
+      <div class="card neon-white">
+        <h3>AI-Driven Education</h3>
+        <p>Access personalized learning paths for AI, Web3, and tech — including tools for academic and industry growth.</p>
       </div>
-      <div class="feature-box">
-        <h3>International Web3 Webinars</h3>
-        <p>Connect with the global community through live events, panel talks, and future-focused workshops.</p>
+      <div class="card neon-white">
+        <h3>Live Global Webinars</h3>
+        <p>Attend and host international webinars led by experts and AI agents in the fields of tech and innovation.</p>
       </div>
     </div>
   </section>
 
-  <section class="projects">
-    <h2>Explore Our Platforms</h2>
-    <div class="features-grid">
-      <div class="feature-box">
-        <img src="images/orbitalscan-preview.jpg" alt="OrbitalScan Preview" />
+  <section class="section" id="platforms">
+    <div class="section-title neon-box">Explore Our Platforms</div>
+    <div class="platforms">
+      <div class="platform">
+        <img src="images/orbitalscan-cover.png" alt="OrbitalScan" />
         <h3>OrbitalScan</h3>
-        <p>Track the newest tokens, NFT drops, airdrops, and memecoins before they trend. Discover alpha signals in real time.</p>
-        <a href="orbitalscan.html" class="cta-button">Learn More</a>
+        <p>Real-time signals, early calls, and curated alpha tools. Available now on Telegram.</p>
+        <a href="https://t.me/orbitalscan_bot" target="_blank" class="btn-neon">Learn More</a>
       </div>
-      <div class="feature-box">
-        <img src="images/orbitalmine-preview.jpg" alt="OrbitalMine Preview" />
+      <div class="platform">
+        <img src="images/orbitalmine-cover.png" alt="OrbitalMine" />
         <h3>OrbitalMine</h3>
-        <p>Gamified mining meets AI logic. Upgrade NFT miners, build your reputation, and earn native tokens every day.</p>
-        <a href="orbitalmine.html" class="cta-button">Learn More</a>
+        <p>Gamified mining and reputation-based rewards. Currently in testnet phase.</p>
+        <a href="https://orbitalmine-web.vercel.app/" target="_blank" class="btn-neon">Learn More</a>
       </div>
     </div>
   </section>
 
-  <section class="about">
-    <h2>Who We Are</h2>
-    <img src="images/orbital-console.jpg" alt="Orbital Console" class="section-img" />
-    <p>
-      We are a 5-person core team with expertise across AI, project design, machine learning, blockchain development, and product strategy.  
-      Since 2016, we’ve led and contributed to dozens of initiatives in Web3 and intelligent automation — united now under one bold mission:  
-      Building a truly personal, automated, and decentralized digital life. OrbitalVerse is more than a product — it’s a long-term vision.
+  <section class="section" id="whoweare">
+    <div class="section-title neon-box">Who We Are</div>
+    <p class="about-text">
+      Our team has been building in tech, AI, blockchain, and product design since 2016. We’ve led Web3 initiatives, developed automation tools, and helped shape the decentralized future. OrbitalVerse isn’t just a product — it's a movement to redefine digital life with intelligence, freedom, and human-inspired AI at the core.
     </p>
   </section>
 
-  <section class="waitlist" id="waitlist">
-    <h2>Partner with Us</h2>
-    <p>Join our journey and get notified as we grow the OrbitalVerse.</p>
+  <section class="section" id="waitlist">
+    <div class="section-title neon-box">Partner with Us</div>
     <form class="waitlist-form">
-      <input type="email" placeholder="Enter your email" required />
-      <button type="submit">Join Waitlist</button>
+      <input type="email" placeholder="Your Email" required />
+      <button type="submit" class="btn-neon">Join the Waitlist</button>
     </form>
   </section>
 
   <footer class="footer">
-    <p>© 2025 OrbitalVerse — All Rights Reserved.</p>
+    <p>© 2025 OrbitalVerse. All rights reserved.</p>
   </footer>
 </body>
 </html>
