Final index update with visual, content, and structure fixes

--- a/public/index.html
+++ b/public/index.html
@@ -3,88 +3,99 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>OrbitalVerse</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>OrbitalVerse | AI & Web3 Hub</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" type="image/png" href="images/orbital-icon.png" />
+  <link rel="icon" href="orbital-logo.png" type="image/png" />
 </head>
 <body>
-  <header class="header">
-    <img src="images/orbital-icon.png" alt="OrbitalVerse Logo" class="logo" onclick="window.location.href='index.html'" />
-    <nav class="nav">
+  <header>
+    <a href="index.html"><img src="orbital-logo.png" alt="OrbitalVerse Logo" class="logo" /></a>
+    <nav>
       <a href="#whatwedo">What We Do</a>
       <a href="#platforms">Platforms</a>
-      <a href="#whoweare">About</a>
+      <a href="#who">Who We Are</a>
       <a href="#waitlist">Join Us</a>
     </nav>
   </header>
 
   <section class="hero">
-    <h1 class="hero-title">Unifying AI Agents and Web3 Discovery</h1>
-    <p class="hero-subtitle">Into a single intelligent ecosystem for the future of personal automation and decentralized rewards.</p>
+    <h1>Unifying AI Agents and Web3 Discovery</h1>
+    <p class="subtitle-box">A single intelligent ecosystem for the future of personal automation and decentralized rewards.</p>
+    <img src="hero-main.jpg" alt="OrbitalVerse" class="hero-image" />
   </section>
 
-  <section class="section" id="whatwedo">
-    <div class="section-title neon-box">What We Do</div>
-    <div class="cards">
-      <div class="card neon-white">
+  <section id="whatwedo">
+    <h2 class="section-title neon">What We Do</h2>
+    <div class="features">
+      <div class="feature-box">
         <h3>Create Your Personal AI Agent</h3>
-        <p>Build your own intelligent assistant to search, analyze, and organize across the internet in your own voice and style.</p>
+        <p>Build your own AI agent with memory, personality, and emotional tone — for daily research, analysis, and support across the entire web.</p>
       </div>
-      <div class="card neon-white">
-        <h3>Turn Devices Into Miners</h3>
-        <p>Use your phone, laptop, or home devices as smart miners to earn by contributing to the OrbitalVerse ecosystem.</p>
+      <div class="feature-box">
+        <h3>Earn Through Smart Mining</h3>
+        <p>Turn any device into a miner. Earn tokens while contributing to network intelligence and powering decentralized automation.</p>
       </div>
-      <div class="card neon-white">
-        <h3>Build Custom Investment Baskets</h3>
-        <p>Create investment strategies based on your personality, budget, and emotions — tailored by AI.</p>
+      <div class="feature-box">
+        <h3>Build Your Personalized Investment Basket</h3>
+        <p>Invest based on your mood, budget, and goals. Our AI helps shape risk-balanced, Web3-native strategies tailored to you.</p>
       </div>
-      <div class="card neon-white">
-        <h3>AI-Driven Education</h3>
-        <p>Access personalized learning paths for AI, Web3, and tech — including tools for academic and industry growth.</p>
+      <div class="feature-box">
+        <h3>Learn with Personalized AI Tutors</h3>
+        <p>AI-powered educational environments for deep tech, thesis guidance, and practical skill-building — from Web3 to university-level ML.</p>
       </div>
-      <div class="card neon-white">
-        <h3>Live Global Webinars</h3>
-        <p>Attend and host international webinars led by experts and AI agents in the fields of tech and innovation.</p>
+      <div class="feature-box">
+        <h3>Global AI-Powered Webinars</h3>
+        <p>Attend global, multi-language webinars for tech innovation, guided by AI-curated experts and community interaction.</p>
       </div>
     </div>
   </section>
 
-  <section class="section" id="platforms">
-    <div class="section-title neon-box">Explore Our Platforms</div>
+  <section id="platforms">
+    <h2 class="section-title neon">Explore Our Platforms</h2>
     <div class="platforms">
-      <div class="platform">
-        <img src="images/orbitalscan-cover.png" alt="OrbitalScan" />
-        <h3>OrbitalScan</h3>
-        <p>Real-time signals, early calls, and curated alpha tools. Available now on Telegram.</p>
-        <a href="https://t.me/orbitalscan_bot" target="_blank" class="btn-neon">Learn More</a>
-      </div>
-      <div class="platform">
-        <img src="images/orbitalmine-cover.png" alt="OrbitalMine" />
+      <div class="platform-box">
+        <img src="orbitalmine-img.jpg" alt="OrbitalMine">
         <h3>OrbitalMine</h3>
-        <p>Gamified mining and reputation-based rewards. Currently in testnet phase.</p>
-        <a href="https://orbitalmine-web.vercel.app/" target="_blank" class="btn-neon">Learn More</a>
+        <p>Gamified AI-powered mining with NFTs, reputation, and tokenized upgrades. Turn activity into automated revenue.</p>
+        <a href="https://orbitalmine-web.vercel.app/" target="_blank" class="neon-button">Learn More</a>
+      </div>
+      <div class="platform-box">
+        <img src="orbitalscan-img.jpg" alt="OrbitalScan">
+        <h3>OrbitalScan</h3>
+        <p>Telegram MiniApp delivering daily alpha: memecoins, NFTs, and airdrops — all curated, trusted, and AI-assessed.</p>
+        <a href="https://t.me/orbitalscan_bot" target="_blank" class="neon-button">Learn More</a>
       </div>
     </div>
   </section>
 
-  <section class="section" id="whoweare">
-    <div class="section-title neon-box">Who We Are</div>
-    <p class="about-text">
-      Our team has been building in tech, AI, blockchain, and product design since 2016. We’ve led Web3 initiatives, developed automation tools, and helped shape the decentralized future. OrbitalVerse isn’t just a product — it's a movement to redefine digital life with intelligence, freedom, and human-inspired AI at the core.
-    </p>
+  <section id="who">
+    <h2 class="section-title neon">Who We Are</h2>
+    <div class="who-text">
+      <p>
+        We are an experienced team of tech explorers with backgrounds in AI, machine learning, blockchain, design, and project strategy.
+        Since 2016, we’ve initiated and contributed to dozens of innovations across Web3 and intelligent automation.
+        Our mission is to build a truly personal, decentralized, and autonomous digital lifestyle — one that adapts to each user.
+        OrbitalVerse isn’t just a platform. It’s a long-term vision for future-native technology.
+      </p>
+    </div>
   </section>
 
-  <section class="section" id="waitlist">
-    <div class="section-title neon-box">Partner with Us</div>
-    <form class="waitlist-form">
-      <input type="email" placeholder="Your Email" required />
-      <button type="submit" class="btn-neon">Join the Waitlist</button>
+  <section id="waitlist">
+    <h2 class="section-title neon">Partner with Us</h2>
+    <form class="email-form">
+      <input type="email" placeholder="Your Email Address" required />
+      <button type="submit" class="neon-button">Join Waitlist</button>
     </form>
   </section>
 
-  <footer class="footer">
-    <p>© 2025 OrbitalVerse. All rights reserved.</p>
+  <footer>
+    <a href="#top"><img src="orbital-logo.png" alt="Back to top" class="footer-logo" /></a>
+    <div class="footer-links">
+      <a href="https://t.me/orbitalscan_bot" target="_blank">Telegram</a>
+      <a href="https://orbitalmine-web.vercel.app/" target="_blank">OrbitalMine</a>
+      <a href="#waitlist">Contact</a>
+    </div>
   </footer>
 </body>
 </html>
