Fix image paths and finalize homepage

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>OrbitalVerse | AI & Web3 Hub</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="orbital-logo.png" type="image/png" />
+  <link rel="icon" href="images/logo.png" type="image/png" />
 </head>
 <body>
   <header>
-    <a href="index.html"><img src="orbital-logo.png" alt="OrbitalVerse Logo" class="logo" /></a>
+    <a href="index.html"><img src="images/logo.png" alt="OrbitalVerse Logo" class="logo" /></a>
     <nav>
       <a href="#whatwedo">What We Do</a>
       <a href="#platforms">Platforms</a>
@@ -22,7 +22,7 @@
   <section class="hero">
     <h1>Unifying AI Agents and Web3 Discovery</h1>
     <p class="subtitle-box">A single intelligent ecosystem for the future of personal automation and decentralized rewards.</p>
-    <img src="hero-main.jpg" alt="OrbitalVerse" class="hero-image" />
+    <img src="images/hero-main.jpg" alt="OrbitalVerse" class="hero-image" />
   </section>
 
   <section id="whatwedo">
@@ -55,13 +55,13 @@
     <h2 class="section-title neon">Explore Our Platforms</h2>
     <div class="platforms">
       <div class="platform-box">
-        <img src="orbitalmine-img.jpg" alt="OrbitalMine">
+        <img src="images/orbitalmine-preview.jpg" alt="OrbitalMine">
         <h3>OrbitalMine</h3>
         <p>Gamified AI-powered mining with NFTs, reputation, and tokenized upgrades. Turn activity into automated revenue.</p>
         <a href="https://orbitalmine-web.vercel.app/" target="_blank" class="neon-button">Learn More</a>
       </div>
       <div class="platform-box">
-        <img src="orbitalscan-img.jpg" alt="OrbitalScan">
+        <img src="images/orbitalscan-preview.jpg" alt="OrbitalScan">
         <h3>OrbitalScan</h3>
         <p>Telegram MiniApp delivering daily alpha: memecoins, NFTs, and airdrops — all curated, trusted, and AI-assessed.</p>
         <a href="https://t.me/orbitalscan_bot" target="_blank" class="neon-button">Learn More</a>
@@ -73,7 +73,7 @@
     <h2 class="section-title neon">Who We Are</h2>
     <div class="who-text">
       <p>
-        We are an experienced team of tech explorers with backgrounds in AI, machine learning, blockchain, design, and project strategy.
+        We are an experienced team of tech explorers with backgrounds in AI, machine learning, blockchain, design, and product strategy.
         Since 2016, we’ve initiated and contributed to dozens of innovations across Web3 and intelligent automation.
         Our mission is to build a truly personal, decentralized, and autonomous digital lifestyle — one that adapts to each user.
         OrbitalVerse isn’t just a platform. It’s a long-term vision for future-native technology.
@@ -90,7 +90,7 @@
   </section>
 
   <footer>
-    <a href="#top"><img src="orbital-logo.png" alt="Back to top" class="footer-logo" /></a>
+    <a href="#top"><img src="images/logo.png" alt="Back to top" class="footer-logo" /></a>
     <div class="footer-links">
       <a href="https://t.me/orbitalscan_bot" target="_blank">Telegram</a>
       <a href="https://orbitalmine-web.vercel.app/" target="_blank">OrbitalMine</a>
