Fix all image paths for OrbitalVerse homepage

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="OrbitalVerse Logo" class="logo" onclick="goHome()">
+    <img src="images/logo.png" alt="OrbitalVerse Logo" class="logo" onclick="goHome()">
     <nav>
       <a href="#whatwedo">What We Do</a>
       <a href="#platforms">Platforms</a>
@@ -21,6 +21,7 @@
   <section class="hero">
     <h1>Unifying AI Agents and Web3 Discovery</h1>
     <p class="subtitle">A single intelligent ecosystem for the future of personal automation and decentralized rewards.</p>
+    <img src="images/hero-main.jpg" alt="Hero Image" class="hero-image" />
   </section>
 
   <section id="whatwedo" class="section">
@@ -38,13 +39,13 @@
     <h2 class="neon-title">Explore Our Platforms</h2>
     <div class="platforms">
       <div class="platform-card">
-        <img src="orbitalscan-cover.jpg" alt="OrbitalScan"/>
+        <img src="images/orbitalscan-preview.jpg" alt="OrbitalScan"/>
         <h3>OrbitalScan</h3>
         <p>Daily Signals for Memecoins, NFTs & Airdrops via Telegram MiniApp</p>
         <a href="https://t.me/orbitalscan_bot" target="_blank" class="cta-button">Explore OrbitalScan</a>
       </div>
       <div class="platform-card">
-        <img src="orbitalmine-cover.jpg" alt="OrbitalMine"/>
+        <img src="images/orbitalmine-preview.jpg" alt="OrbitalMine"/>
         <h3>OrbitalMine</h3>
         <p>Gamified Token Mining with Reputation System powered by NFTs</p>
         <a href="https://orbitalmine-web.vercel.app/" target="_blank" class="cta-button">Explore OrbitalMine</a>
